changed a without underline

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -60,6 +60,21 @@ body
                 box-shadow: 0 10px 20px black
             &_text
                 margin-top: 15px
+                a
+                    text-decoration: none
+                    color: #252422
+                a:hover
+
+                    text-decoration: underline
+
+
+
+
+
+
+
+
+
 .text
     // position: absolute
     // top: 100px
